--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,27 @@ a, path, span {
   color: #F6E1D3;
 }
 
+::-webkit-scrollbar {
+  width: 2px;
+  height: 2px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #A8A6A8;
+  border-radius: 0px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #878587;
+}
+
+::-webkit-scrollbar-track {
+  background: #FFFFFF;
+  border-radius: 0px;
+  -webkit-box-shadow: inset 0px 0px 0px 0px #F0F0F0;
+          box-shadow: inset 0px 0px 0px 0px #F0F0F0;
+}
+
 .header {
   padding: 48px 0px;
 }
@@ -509,12 +530,12 @@ a, path, span {
 }
 .main .recent-posts .rp-navigation__item > a span {
   font-size: 16px;
-  line-height: 32px;
+  line-height: 34px;
   color: #777777;
   white-space: nowrap;
 }
 .main .recent-posts .rp-navigation__item:not(:last-child) {
-  padding: 0px 24px 8px 0px;
+  padding-right: 24px;
 }
 .main .recent-posts .rp-navigation__item.active:after {
   content: "";
@@ -832,6 +853,38 @@ a, path, span {
 }
 .footer .back-2-header__link:hover path {
   fill: #ffba9d;
+}
+.footer .back-2-header__link:hover svg {
+  -webkit-animation: back2-jump 0.75s;
+          animation: back2-jump 0.75s;
+}
+@-webkit-keyframes back2-jump {
+  from {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.5) rotate(360deg);
+            transform: scale(1.5) rotate(360deg);
+  }
+  to {
+    -webkit-transform: scale(1) rotate(360deg);
+            transform: scale(1) rotate(360deg);
+  }
+}
+@keyframes back2-jump {
+  from {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.5) rotate(360deg);
+            transform: scale(1.5) rotate(360deg);
+  }
+  to {
+    -webkit-transform: scale(1) rotate(360deg);
+            transform: scale(1) rotate(360deg);
+  }
 }
 @media (max-width: 1279px) {
   .main__row {
