--- a/css/style.css
+++ b/css/style.css
@@ -638,8 +638,8 @@ a, path, span {
 }
 .main .recent-posts .post__tags {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 27.173;
-          flex: 0 0 27.173;
+      -ms-flex: 0 0 27.173%;
+          flex: 0 0 27.173%;
 }
 .main .recent-posts .tags {
   -webkit-user-select: none;
@@ -1010,7 +1010,7 @@ a, path, span {
   .header .primary-navigation__body .primary-menu__item {
     padding: 8px 0px;
   }
-  .header .primary-navigation__body .primary-menu__item:not(.menu__item-has-child, .item-active):hover:after {
+  .header .primary-navigation__body .primary-menu__item:not(.menu__item-has-child):not(.item-active):hover:after {
     display: none;
   }
   .header .primary-navigation__body .primary-menu .menu__item-has-child {
